--- a/index.html
+++ b/index.html
@@ -75,15 +75,14 @@
           font-size: 1.2rem;
         }
 
-        #filterInput,
-        .file-name,
-        #copyButton {
+        #filterInput {
           padding: 1.5em;
         }
 
         .file-name,
         #copyButton {
-          font-size: 1.2em;
+          font-size: 0.9em;
+          padding: 1em;
         }
 
         #fileContent {
