--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Louvor ISP</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <style>
       body {
         font-size: 1rem;
@@ -12,6 +13,8 @@
       }
 
       h1 {
+        font-size: 2.2rem;
+        font-family: "Open Sans", sans-serif;
         color: #333;
       }
 
