--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Louvor ISP</title>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <style>
       body {
         font-size: 1rem;
@@ -130,11 +133,11 @@
         }
 
         async function fetchFileContent(path) {
-          const response = await fetch(
-            `https://api.github.com/repos/${repoOwner}/${repoName}/contents/${path}`
-          );
-          const data = await response.json();
-          const content = atob(data.content);
+          const content = await fetch(`https://raw.githubusercontent.com/${repoOwner}/${repoName}/main/${path}`)
+            .then((response) => response.text())
+            .catch((error) => {
+              throw new Error("Error:", error)
+            });
           fileContent.textContent = content;
           fileContent.style.display = "block";
           copyButton.style.display = "block";
